FIREFLY-1765: Allow non-array type columns - Repeat value if not an array.